Styling fixes: no more cramped issue titles, no more cramped dates, consistent sidebar width, increased space for tags, removed space for ticks when not in use, reduced issue count chart size.
svn path=/trunk/; revision=102

--- a/stylesheets/common_.css
+++ b/stylesheets/common_.css
@@ -186,8 +186,20 @@ img {
 	padding: 0px 10px 0px 10px;
 }
 
+.DateMD {
+	min-width: 35px;
+}
+
+.DateMD {
+	min-width: 45px;
+}
+
+.Listing .AbbreviatedIssueTitle {
+	min-width: 300px;
+}
+
 form { 
-  display : inline;
+  display: inline;
 }
 
 hr {
